--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -897,4 +897,72 @@ body.Categories.isMobile .PageControls.Top {
   stroke: rgba(0, 0, 0, 0.1);
 }
 
+.embedLink {
+  display: block;
+  background: #ffffff;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+}
+
+.embedLink, .embedLink:hover, .embedLink:focus {
+  color: inherit;
+  text-decoration: none !important;
+}
+
+.embedLink-body {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+.embedLink-main {
+  padding: 18px;
+  box-sizing: border-box;
+}
+
+.embedLink-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 225px;
+  height: 100%;
+}
+
+.embedLink-image + .embedLink-main {
+  margin-left: auto;
+  width: calc(100% - 225px);
+}
+
+.embedLink-title {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.embedLink-source {
+  font-size: 12.04px;
+  color: rgba(85, 90, 98, 0.72);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 6px 0;
+}
+
+.embedLink-excerpt {
+  font-size: 14px;
+  color: #555A62;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+  max-width: 100%;
+  line-height: 1.5;
+  max-height: 63px;
+}
+
 /*# sourceMappingURL=style-compat.css.map */
