--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -396,11 +396,15 @@ body.isMobile .change-picture .change-picture-instructions {
 .blockQuote {
   display: block;
   margin: 0;
-  padding: 0;
+  padding-top: 0;
+  padding-left: 18px;
+  padding-right: 0;
+  padding-bottom: 0;
   box-sizing: border-box;
   width: 100%;
   vertical-align: middle;
-  background-color: #f9f9fa;
+  border-left: solid #D8D8D8 6px;
+  color: #A3A3A3;
 }
 
 .userContent code,
@@ -409,11 +413,13 @@ body.isMobile .change-picture .change-picture-instructions {
   font-size: 0.86em;
   vertical-align: middle;
   line-height: 1em;
-  border-radius: 3px;
-  border: solid 1px #cacaca;
   box-sizing: border-box;
   font-family: monospace;
-  background-color: #f9f9fa;
+  background: transparent;
+  border-radius: 2;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #a3a3a3;
   padding-top: 0.07em;
   padding-bottom: 0.07em;
   padding-left: 0.5em;
@@ -433,11 +439,13 @@ body.isMobile .change-picture .change-picture-instructions {
 
 .userContent pre .code,
 .codeBlock .code {
+  border-radius: 0;
+  border: 0;
   display: block;
   background: none;
-  font-size: 1em;
   padding: 12px;
-  background-color: #f9f9fa;
+  font-size: 14px;
+  background-color: #f6f8fa;
 }
 
 .userContent > *:not(:last-child) {
@@ -469,6 +477,7 @@ body.isMobile .change-picture .change-picture-instructions {
 .userContent p {
   word-break: break-word;
   text-overflow: ellipsis;
+  line-height: 1.5;
 }
 
 .userContent iframe,
@@ -660,10 +669,11 @@ body.Categories.isMobile .PageControls.Top {
   width: 100%;
   max-width: 100%;
   font-size: 16px;
-  min-height: 60px;
+  min-height: 48px;
   padding: 0 18px;
   outline: 0;
   cursor: pointer;
+  text-align: center;
 }
 
 .button-spoiler {
@@ -686,23 +696,42 @@ body.Categories.isMobile .PageControls.Top {
   z-index: 1;
 }
 
-.button-spoiler .spoiler-icon {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
+.spoiler-warningMain {
+  position: relative;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
+  padding: 0 24px;
+  width: 100%;
+  line-height: 1;
 }
 
-.spoiler-warning {
+.spoiler-icon {
   position: relative;
-  top: .1em;
-  padding-left: 36px;
+  width: 24px;
+  height: 24px;
+  margin-right: 12px;
 }
 
 .spoiler-chevron {
-  margin-left: 6px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 36px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+}
+
+.spoiler-warningAfter,
+.spoiler-warningBefore {
+  margin: 0;
+  padding: 0;
+}
+
+.spoiler-warningBefore {
+  margin-right: 6px;
 }
 
 .spoiler-content {
@@ -993,6 +1022,12 @@ body.Categories.isMobile .PageControls.Top {
   max-width: 100%;
   line-height: 1.5;
   max-height: 63px;
+}
+
+.blockQuote {
+  padding: 3px 3px 3px 18px;
+  border-left: solid #D8D8D8 6px;
+  color: #A3A3A3;
 }
 
 /*# sourceMappingURL=style-compat.css.map */
