--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -33,7 +33,7 @@ $richEditor-paragraphCode_fontSize: 14px;
 
 $richEditor-videoPlayIcon_width: 80px;
 $richEditor-videoPlayIcon_hoverColor: #0291db;
-$embedVideo_width: 640px;
+
 $embedImage_width: 640px;
 $embedded-quote_fg: #A3A3A3 !default;
 
@@ -442,13 +442,14 @@ $embedded-quote_fg: #A3A3A3 !default;
 // Code
 .userContent code,
 .code {
-    display: inline;
+    display: inline-block;
     font-size: $richEditor-code_fontSize;
     vertical-align: middle;
     line-height: 1em;
     box-sizing: border-box;
     font-family: monospace;
     background: transparent;
+    margin: 0 1ex;
     border: {
         radius: $richEditor-inlineCode_borderRadius;
         width: 1px;
