--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -390,13 +390,15 @@ body.isMobile .change-picture .change-picture-instructions {
   transform: translateY(50%) rotate(-45deg);
 }
 
-.blockQuote {
+.blockquote {
   display: block;
   margin: 0;
   padding-top: 0;
   padding-left: 18px;
   padding-right: 0;
   padding-bottom: 0;
+  padding: 3px 3px 3px 18px;
+  border-left: solid #D8D8D8 6px;
   box-sizing: border-box;
   width: 100%;
   vertical-align: middle;
@@ -1027,12 +1029,6 @@ body.Categories.isMobile .PageControls.Top {
   max-width: 100%;
   line-height: 1.5;
   max-height: 63px;
-}
-
-.blockQuote {
-  padding: 3px 3px 3px 18px;
-  border-left: solid #D8D8D8 6px;
-  color: #A3A3A3;
 }
 
 /*# sourceMappingURL=style-compat.css.map */
