--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -463,25 +463,19 @@ $embedded-quote_fg: #A3A3A3 !default;
     }
 }
 
-.userContent pre,
-.codeBlock { // pre
+.code.isBlock {
     overflow-x: auto;
-    background: inherit;
     border: 0;
     word-wrap: normal;
     line-height: 1.4;
-    padding: 0;
     white-space: pre;
+    border-radius: 0;
+    display: block;
+    background: none;
+    padding: 12px;
+    font-size: $richEditor-paragraphCode_fontSize;
+    background-color: $richEditor-paragraphCode_bg;
 
-    .code {
-        border-radius: 0;
-        border: 0;
-        display: block;
-        background: none;
-        padding: 12px;
-        font-size: $richEditor-paragraphCode_fontSize;
-        background-color: $richEditor-paragraphCode_bg;
-    }
 }
 
 
