--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -66,6 +66,7 @@ body.isMobile .change-picture .change-picture-instructions {
   left: 6px;
   height: 24px;
   width: 24px;
+  transition: transform 0.02s linear;
 }
 
 .richEditor-text {
