--- a/applications/dashboard/scss/new-features/_spoiler.scss
+++ b/applications/dashboard/scss/new-features/_spoiler.scss
@@ -39,7 +39,7 @@ $buttonSpoiler: (
     background-color: $spoiler-bg;
 
     .spoiler-content {
-        display: none;
+        //display: none;
     }
 
     .spoiler-chevronUp {
