--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -399,9 +399,13 @@ $embedded-quote_fg: #A3A3A3 !default;
 
 // Orientation specific styles
 
-.richEditor-inlineMenu {
+.richEditor-toolbarContainer {
     &.isUp {
         transform: translateY(-$richEditor-menu_offset);
+
+        .richEditor-nubPosition {
+            top: 100%;
+        }
 
         .richEditor-nub {
             transform: translateY(-50%) rotate(135deg);
@@ -412,12 +416,42 @@ $embedded-quote_fg: #A3A3A3 !default;
         transform: translateY($richEditor-menu_offset);
 
         .richEditor-nubPosition {
+            bottom: 100%;
+        }
+
+        .richEditor-nubPosition {
             align-items: flex-end;
             transform: translateY(-50%) translateX(-50%);
             margin-top: $richEditor-menu_borderWidth;
         }
         .richEditor-nub {
             transform: translateY(50%) rotate(-45deg);
+        }
+    }
+}
+
+.richEditor-paragraphToolbarContainer {
+    position: absolute;
+
+    .richEditor-nubPosition {
+        left: 2px;
+    }
+
+    &.isUp {
+        bottom: 100%;
+
+        .richEditor-nubPosition {
+            top: 100%;
+            transform: none;
+        }
+    }
+
+    &.isDown {
+        top: 100%;
+
+        .richEditor-nubPosition {
+            bottom: 100%;
+            transform: translateY($richEditor-menu_borderWidth);
         }
     }
 }
