--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -79,7 +79,8 @@ $embedded-quote_fg: #A3A3A3 !default;
 .richEditorParagraphMenu {
     position: absolute;
     top: $richEditor-paragraphMenu_offset;
-    right: calc(100% + 6px);
+    left: -6px;
+    transform: translateX(-100%);
     height: $richEditor-icon_size;
     width: $richEditor-icon_size;
     z-index: 1;
