--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -72,7 +72,8 @@ body.isMobile .change-picture .change-picture-instructions {
 .richEditorParagraphMenu {
   position: absolute;
   top: 9px;
-  right: calc(100% + 6px);
+  left: -6px;
+  transform: translateX(-100%);
   height: 24px;
   width: 24px;
   z-index: 1;
