--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -501,7 +501,7 @@ $embedded-quote_fg: #A3A3A3 !default;
     box-sizing: border-box;
     font-family: monospace;
     background: transparent;
-    margin: 0 1ex;
+    margin: 0;
     border: {
         radius: $richEditor-inlineCode_borderRadius;
         width: 1px;
