Updated internal link to have a title, updated tests

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -888,6 +888,14 @@ body.Categories.isMobile .PageControls.Top {
   padding-left: 24px;
 }
 
+.userContent .embedLink-title {
+  margin: 0;
+}
+
+.userContent .embedLink-title:not(:last-child) {
+  margin: 0 0 6px;
+}
+
 .embed {
   white-space: normal;
 }
@@ -1048,10 +1056,6 @@ body.Categories.isMobile .PageControls.Top {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-.embedLink-title:not(:last-child) {
-  margin-bottom: 6px;
 }
 
 .embedLink-source {
