--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -129,6 +129,12 @@ $embedded-quote_fg: #A3A3A3 !default;
     .richEditor-button {
         height: $richEditor-menuButton_size;
         width: $richEditor-menuButton_size;
+        font-size: #{$richEditor-menuButton_size * 24 / 39};
+        line-height: $richEditor-menuButton_size;
+
+        &.emojiChar-🇺🇳 {
+            font-size: 14px;
+        }
     }
 
     &.isRightAligned {
@@ -351,12 +357,15 @@ $embedded-quote_fg: #A3A3A3 !default;
 .insertPopover-body {
     max-height: $richEditor-insertPopover_maxHeight;
     height: $richEditor-insertPopover_height;
-    overflow: auto;
+    margin-bottom: $richEditor-insertPopover_paddingHorizontal;
     padding: {
         left: $richEditor-insertPopover_paddingHorizontal;
         right: $richEditor-insertPopover_paddingHorizontal;
     }
-    margin-bottom: $richEditor-insertPopover_paddingHorizontal;
+}
+
+.content-wrapper {
+    height: 100%;
 }
 
 .richEditor-menu.insertEmoji {
