--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -181,6 +181,10 @@ $embedded-quote_fg: #A3A3A3 !default;
             opacity: 1;
         }
     }
+
+    &.isActive .richEditorInline-icon {
+        color:
+    }
 }
 
 .embedBar {
