--- a/applications/dashboard/scss/new-features/_emoji.scss
+++ b/applications/dashboard/scss/new-features/_emoji.scss
@@ -1,9 +1,10 @@
 .safeEmoji { // All emoji
     display: inline;
+    font-family: "Segoe UI Emoji", sans-serif;
 }
 
 .nativeEmoji { // Real Emojis
-    font-family: "Segoe UI Emoji"; // Helps with IE
+    font-family: "Segoe UI Emoji", sans-serif; // Helps with IE
 }
 
 .fallBackEmoji { // Image Emoji
