Complete spoiler blot

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -687,6 +687,10 @@ body.Categories.isMobile .PageControls.Top {
   display: none;
 }
 
+.spoiler .spoiler-content {
+  display: none;
+}
+
 .spoiler.isShowingSpoiler .spoiler-content {
   display: block;
 }
