--- a/applications/dashboard/scss/new-features/_spoiler.scss
+++ b/applications/dashboard/scss/new-features/_spoiler.scss
@@ -43,12 +43,13 @@ $buttonSpoiler: (
     }
 
     .spoiler-content {
-        display: none;
+        max-height: 0;
     }
 
     &.isShowingSpoiler {
         .spoiler-content {
             display: block;
+            max-height: 99999px;
         }
 
         .spoiler-chevronUp {
