Tweak spacing for emoji category buttons

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -560,6 +560,8 @@ body.isMobile .change-picture .change-picture-instructions {
 .emojiGroups {
   display: flex;
   flex-wrap: nowrap;
+  justify-content: space-between;
+  padding-left: 3px;
 }
 
 .emojiGroup {
