--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -35,6 +35,7 @@ $richEditor-pilcrowAnimation_duration: 0.3s;
 $richEditor-emojiCategory_color: #737982;
 $richEditor-emojiCategory_hoverColor: #212327;
 $richEditor-emojiCategory_selectedBg: #aee4fe;
+$richEditor-emojiGroup_paddingLeft: 3px;
 
 $richEditor-videoPlayIcon_width: 80px;
 $richEditor-videoPlayIcon_hoverColor: #0291db;
@@ -605,6 +606,8 @@ $embedded-quote_fg: #A3A3A3 !default;
 .emojiGroups {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-left: $richEditor-emojiGroup_paddingLeft;
 }
 
 .emojiGroup {
